CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

MESSAGE("Configuring MultipleFilesCompression benchmark test")
PROJECT (Spruce)

SET(TEST_NAME MultipleFilesCompression)

CONFIGURE_FILE(
	"${PROJECT_SOURCE_DIR}/Compressor.cpp"
	"${PROJECT_BINARY_DIR}/Compressor.cpp"
)

FILE(
	COPY ${PROJECT_SOURCE_DIR}/Compressor.hpp
	DESTINATION ${PROJECT_BINARY_DIR}/
)

ADD_LIBRARY(${TEST_NAME} STATIC ${PROJECT_BINARY_DIR}/Compressor.cpp)

INSTALL(
		FILES ${CMAKE_BINARY_DIR}/bin/${TEST_NAME}.sh
		DESTINATION ${CMAKE_INSTALL_PREFIX}bin
		PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ
)

FILE(
	COPY ${TEST_NAME}.sh
	DESTINATION ${CMAKE_BINARY_DIR}/bin
	NO_SOURCE_PERMISSIONS
)

EXECUTE_PROCESS(COMMAND chmod +x ${CMAKE_BINARY_DIR}/bin/${TEST_NAME}.sh)
