CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

MESSAGE("Configuring LargeFileCreation benchmark test")
PROJECT (Spruce)

SET(TEST_NAME SearchMapFile)

CONFIGURE_FILE(
	"${PROJECT_SOURCE_DIR}/SearchMapFile.cpp"
	"${PROJECT_BINARY_DIR}/SearchMapFile.cpp"
)

FILE(
	COPY ${PROJECT_SOURCE_DIR}/SearchMapFile.hpp
	DESTINATION ${PROJECT_BINARY_DIR}/
)

#ADD_LIBRARY(${TEST_NAME} STATIC ${PROJECT_BINARY_DIR}/SearchMapFile.cpp)
