CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

MESSAGE("Configuring bechmark utils sources.")

PROJECT (Spruce)

ADD_EXECUTABLE(createfile file.cpp)

INSTALL(
		FILES ${CMAKE_BINARY_DIR}/bin/createfile
		DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
		PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ
)

CONFIGURE_FILE(
	"${PROJECT_SOURCE_DIR}/CMakeLists.txt"
	"${PROJECT_BINARY_DIR}/CMakeLists.txt"
)
