CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

MESSAGE("Configuring BTRFS module")
PROJECT (Spruce)

ADD_CUSTOM_COMMAND(
   OUTPUT  ${CMAKE_CURRENT_BINARY_DIR}/module.cpp 
   COMMAND ${CMAKE_BINARY_DIR}/bin/engine ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_SOURCE_DIR}/engine
   DEPENDS ${CMAKE_BINARY_DIR}/bin/engine ${CMAKE_SOURCE_DIR}/engine/module.xslt ${CMAKE_SOURCE_DIR}/engine/testset.xslt ${CMAKE_CURRENT_SOURCE_DIR}/module.xml ${CMAKE_CURRENT_SOURCE_DIR}/Ioctl.xml ${CMAKE_CURRENT_SOURCE_DIR}/Mount.xml 
   )

include_directories("${CMAKE_CURRENT_SOURCE_DIR}")

IF ( ${OS_32_BITS})	
ADD_EXECUTABLE(btrfs ${CMAKE_CURRENT_BINARY_DIR}/module.cpp )

					
TARGET_LINK_LIBRARIES(btrfs utils)
TARGET_LINK_LIBRARIES(btrfs rt)

install (	FILES "${CMAKE_BINARY_DIR}/bin/btrfs"
			DESTINATION bin
			PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
ELSE ( ${OS_32_BITS})
	ADD_EXECUTABLE(btrfs_64 ${CMAKE_CURRENT_BINARY_DIR}/module.cpp)
				
	TARGET_LINK_LIBRARIES(btrfs_64 utils)
	TARGET_LINK_LIBRARIES(btrfs_64 rt)

	install (	FILES "${CMAKE_BINARY_DIR}/bin/btrfs_64"
			DESTINATION bin
			PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)

ENDIF ( ${OS_32_BITS})	

IF (NOT ${OS_32_BITS})	
	ADD_CUSTOM_COMMAND(
   OUTPUT  module_32.cpp
   COMMAND cp module.cpp module_32.cpp
   DEPENDS module.cpp
   )
	set_source_files_properties(module_32.cpp PROPERTIES COMPILE_FLAGS "-m32")
	
	
	ADD_EXECUTABLE(btrfs_32 module_32.cpp)
	TARGET_LINK_LIBRARIES(btrfs_32 utils_32)
	TARGET_LINK_LIBRARIES(btrfs_32 rt)
	
	set_target_properties(btrfs_32 PROPERTIES LINK_FLAGS "-m32") 
	
	install (	FILES "${CMAKE_BINARY_DIR}/bin/btrfs_32"
			DESTINATION bin
			PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
	
ENDIF (NOT ${OS_32_BITS})
