CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

MESSAGE("Configuring XFS module")
PROJECT (Spruce)

ADD_CUSTOM_COMMAND(
   OUTPUT  ${CMAKE_CURRENT_BINARY_DIR}/module.cpp
   COMMAND ${CMAKE_BINARY_DIR}/bin/engine ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_SOURCE_DIR}/engine
   DEPENDS ${CMAKE_BINARY_DIR}/bin/engine ${CMAKE_SOURCE_DIR}/engine/module.xslt ${CMAKE_SOURCE_DIR}/engine/testset.xslt ${CMAKE_CURRENT_SOURCE_DIR}/module.xml ${CMAKE_CURRENT_SOURCE_DIR}/Ioctl.xml quotactl.xml
   )

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

ADD_EXECUTABLE(xfs ${CMAKE_CURRENT_BINARY_DIR}/module.cpp )
						
TARGET_LINK_LIBRARIES(xfs utils)
TARGET_LINK_LIBRARIES(xfs rt)

install (	FILES "${CMAKE_BINARY_DIR}/bin/xfs"
			DESTINATION bin
			PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
