MESSAGE("-- Configuring XFS module")

if(COMMAND cmake_policy)
  cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

ADD_CUSTOM_COMMAND(
   OUTPUT  ${CMAKE_CURRENT_BINARY_DIR}/module.cpp
   COMMAND ${CMAKE_BINARY_DIR}/bin/engine ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_SOURCE_DIR}/engine
   DEPENDS ${CMAKE_BINARY_DIR}/bin/engine ${CMAKE_SOURCE_DIR}/engine/module.xslt ${CMAKE_SOURCE_DIR}/engine/testset.xslt ${CMAKE_CURRENT_SOURCE_DIR}/module.xml ${CMAKE_CURRENT_SOURCE_DIR}/Ioctl.xml quotactl.xml
   )

IF ( ${OS_32_BITS} OR NOT ${HAVE_MULTILIB})	
ADD_EXECUTABLE(xfs ${CMAKE_CURRENT_BINARY_DIR}/module.cpp )

					
TARGET_LINK_LIBRARIES(xfs utils)
TARGET_LINK_LIBRARIES(xfs rt)

install (	FILES "${CMAKE_BINARY_DIR}/bin/xfs"
			DESTINATION bin
			PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
ELSE ( ${OS_32_BITS} OR NOT ${HAVE_MULTILIB})	
	ADD_EXECUTABLE(xfs_64 ${CMAKE_CURRENT_BINARY_DIR}/module.cpp)
				
	TARGET_LINK_LIBRARIES(xfs_64 utils)
	TARGET_LINK_LIBRARIES(xfs_64 rt)

	install (	FILES "${CMAKE_BINARY_DIR}/bin/xfs_64"
			DESTINATION bin
			PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)

ENDIF ( ${OS_32_BITS} OR NOT ${HAVE_MULTILIB})	

IF (NOT ${OS_32_BITS} AND ${HAVE_MULTILIB})	
	ADD_CUSTOM_COMMAND(
   OUTPUT  module_32.cpp
   COMMAND cp module.cpp module_32.cpp
   DEPENDS module.cpp
   )
	set_source_files_properties(module_32.cpp PROPERTIES COMPILE_FLAGS "-m32")
	
	
	ADD_EXECUTABLE(xfs_32 module_32.cpp)
	TARGET_LINK_LIBRARIES(xfs_32 utils_32)
	TARGET_LINK_LIBRARIES(xfs_32 rt)
	
	set_target_properties(xfs_32 PROPERTIES LINK_FLAGS "-m32") 
	
	install (	FILES "${CMAKE_BINARY_DIR}/bin/xfs_32"
			DESTINATION bin
			PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
	
ENDIF (NOT ${OS_32_BITS} AND ${HAVE_MULTILIB})	
